2008-09-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Lexmark-E120n.xml: Added IEEE 1284 device ID (RH bug
	#201318).

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Brother-HL-2060.xml: Changed recommended driver to
	  "hpijs" (Bug #166, RH bug #292021).

2008-09-02  George Liu <george.liu@ricoh-tech.com>

	* PPD/: Fixed missing colon bug in 412 Ricoh Family PPD files. 

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/Brother-HL-2060.xml: Fixed typo in model name which
	prevented this PPD being accessible.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-Color_LaserJet_9500_MFP.xml: Fixed typo in model
	name which prevented this PPD being accessible.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-LaserJet_4345_MFP.xml: Fixed typo in model name
	which prevented this PPD being accessible (RH bug #459847).

2008-08-28  Dafydd Crosby <dcrosby@userful.com>
	* PPD/Oce/Others: Moved Oce-cm2520.ppd to non-free repository.

2008-08-20  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml, driver/deskjet.xml,
	  driver/dj505j.xml, driver/djet500.xml, driver/gdi.xml,
	  driver/hl1250.xml, driver/hl7x0.xml, driver/laserjet.xml,
	  driver/lj4dith.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/oki4w.xml: Made Halftoning option
	  work with PDF input files.

	* driver/hl7x0.xml: Added Ghostscript command line also with
	  <prototype_pdf> tag, so that for this driver also PDF input is
	  accepted.

	* opt/126.xml, opt/2.xml, opt/6.xml, opt/PageSize-A4only.xml,
	  opt/gdi-PageSizePS.xml, opt/jap-PageSize.xml,
	  opt/jap-Resolution.xml, opt/largeformat-PageSize.xml,
	  opt/oki4w-PageSize.xml, opt/10.xml, opt/128.xml opt/129.xml,
	  opt/130.xml, opt/213.xml, opt/5.xml, opt/7.xml, opt/8.xml,
	  opt/9.xml, opt/GS-HalftoningAlgorithm-Gray.xml: Converted
	  PostScript-code based options to Ghostscript-command-line-based