@@ -1,6 +1,6 @@
 <printer id="printer/Apple-12_640ps">
   <make>Apple</make>
-  <model>LaserWriter 12/640ps</model>
+  <model>12/640ps</model>
   <mechanism>
     <laser/><!--not "color"-->
     <resolution>
