@@ -1,6 +1,6 @@
 <printer id="printer/HP-DesignJet_750">
   <make>HP</make>
-  <model>DesignJet 750C</model>
+  <model>DesignJet 750</model>
   <mechanism>
     <inkjet />
     <color />
