@@ -1,6 +1,6 @@
 <printer id="printer/Ricoh-Aficio_5206">
   <make>Ricoh</make>
-  <model>Aficio Aficio 5206</model>
+  <model>Aficio 5206</model>
   <mechanism>
     <laser/>
     <color/>
