@@ -1,5 +1,12 @@
 2008-09-03  Tim Waugh  <twaugh@redhat.com>
 
+	* printer/HP-DesignJet_750.xml, printer/Apple-12_640ps.xml,
+	printer/Ricoh-Aficio_5206.xml: Fixed inconsistencies between the
+	model names and the XML file names, which were preventing PPDs
+	from being accessible.
+
+2008-09-03  Tim Waugh  <twaugh@redhat.com>
+
 	* printer/Lexmark-E120n.xml: Added IEEE 1284 device ID (RH bug
 	#201318).
 
